added bg image programatically

--- a/CrystalBall/en.lproj/MainStoryboard.storyboard
+++ b/CrystalBall/en.lproj/MainStoryboard.storyboard
@@ -12,7 +12,6 @@
                         <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="background.png" translatesAutoresizingMaskIntoConstraints="NO" id="sko-1j-mj4"/>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="It is decidedly so" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="10" preferredMaxLayoutWidth="219" translatesAutoresizingMaskIntoConstraints="NO" id="Erq-CT-hUf">
                                 <constraints>
                                     <constraint firstAttribute="width" constant="219" id="Rem-Vg-K1N"/>
@@ -41,12 +40,9 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="sko-1j-mj4" firstAttribute="leading" secondItem="3" secondAttribute="leading" type="default" id="OAs-bK-J3p"/>
-                            <constraint firstItem="sko-1j-mj4" firstAttribute="top" secondItem="3" secondAttribute="top" type="default" id="TUc-Ga-76V"/>
+                            <constraint firstItem="Erq-CT-hUf" firstAttribute="centerY" secondItem="3" secondAttribute="centerY" type="default" id="Qp9-QI-hgR"/>
                             <constraint firstItem="OFA-00-ZsP" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="25" id="eHl-JB-sEG"/>
                             <constraint firstItem="Erq-CT-hUf" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="50" id="m2o-oZ-xBy"/>
-                            <constraint firstItem="Erq-CT-hUf" firstAttribute="centerY" secondItem="sko-1j-mj4" secondAttribute="centerY" type="default" id="soJ-Mh-p6e"/>
-                            <constraint firstItem="sko-1j-mj4" firstAttribute="bottom" secondItem="3" secondAttribute="bottom" type="default" id="tgF-PP-ElP"/>
                             <constraint firstAttribute="bottom" secondItem="OFA-00-ZsP" secondAttribute="bottom" constant="14" id="vaH-tW-erE"/>
                         </constraints>
                     </view>
@@ -58,21 +54,6 @@
             </objects>
         </scene>
     </scenes>
-    <resources>
-        <image name="background.png" width="320" height="480"/>
-    </resources>
-    <classes>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
-        </class>
-        <class className="ViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="buttonPressed:" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="predictionLabel" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
