--- a/CrystalBall/en.lproj/MainStoryboard.storyboard
+++ b/CrystalBall/en.lproj/MainStoryboard.storyboard
@@ -26,11 +26,11 @@
                                     <constraint firstAttribute="height" constant="44" id="rxy-qr-N82"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" image="button_bg_off@2x.png">
+                                <state key="normal" image="button_bg_off.png">
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
-                                <state key="highlighted" image="button_bg_on@2x.png">
+                                <state key="highlighted" image="button_bg_on.png">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
@@ -41,7 +41,6 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="Erq-CT-hUf" firstAttribute="centerY" secondItem="3" secondAttribute="centerY" type="default" id="Qp9-QI-hgR"/>
-                            <constraint firstAttribute="trailing" secondItem="OFA-00-ZsP" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="fXx-V6-qZA"/>
                             <constraint firstItem="Erq-CT-hUf" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="50" id="m2o-oZ-xBy"/>
                             <constraint firstItem="OFA-00-ZsP" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="ovp-ES-hBP"/>
                             <constraint firstAttribute="bottom" secondItem="OFA-00-ZsP" secondAttribute="bottom" constant="20" symbolic="YES" type="default" id="tZi-VA-Ve7"/>
@@ -56,8 +55,8 @@
         </scene>
     </scenes>
     <resources>
-        <image name="button_bg_off@2x.png" width="560" height="83"/>
-        <image name="button_bg_on@2x.png" width="560" height="83"/>
+        <image name="button_bg_off.png" width="280" height="42"/>
+        <image name="button_bg_on.png" width="280" height="42"/>
     </resources>
     <classes>
         <class className="NSLayoutConstraint" superclassName="NSObject">
